# atticus-harness

./: .gitignore  FORGE_BACKLOG.md  FORGE_MISSION.md  PULL_REQUEST_HARNESS_TUI_MONITOR.md  PULL_REQUEST_OCR_QUALITY_REPAIR.md  PULL_REQUEST_OPERATOR_CONTROL_PANEL.md  README.md  codex-last-message.md  pyproject.toml
atticus/: __init__.py  cli.py  config.py  config_manager.py  cost_tracker.py  hooks.py  matter_seed.py  migration_runner.py  operator_control.py  task_lifecycle.py  verifier.py  work_runs.py
docs/: atticus_live_run_hardening_report_2026-04-30.md  handoff.md  harness-monitor.md  operator-control-panel.md
forge/: __init__.py  cli.py  config.py  daemon.py  state.py
forge-app/: README.md  local.atticus.forge.desktop  package.json
tests/: test_adaptive_modules.py  test_anthropic_policy.py  test_bad_fixtures.py  test_candidate_review.py  test_cli_live_resume.py  test_codex_cli_adapter.py  test_command_registry.py  test_context_diagnostics.py  test_coordinator.py  test_evidence_ingest_analyser.py  test_evidence_ingest_cli.py  test_evidence_ingest_executor.py  test_evidence_ingest_gate.py  test_evidence_ingest_integration.py  test_evidence_ingest_normaliser.py  test_evidence_ingest_provenance.py  test_evidence_ingest_register.py  test_evidence_ingest_resolver.py  test_evidence_ingest_scanner.py  test_evidence_ingest_validator.py  test_factory_contracts.py  test_final_gate_lifecycle.py  test_forge_harness.py  test_foundation_contracts.py  test_free_loop.py  test_human_interface.py  test_legal_tools_memory.py  test_live_readiness.py  test_matter_completion.py  (+40 more)
(+562 files in other folders)
