[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atticus-harness"
version = "0.1.0"
description = "Evidence-first legal harness foundation for Atticus Legal"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Atticus Legal Harness" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
atticus = "atticus.cli:main"

[tool.setuptools.packages.find]
include = ["atticus*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
